--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Jeux Kabir — Bonneteau 2D & Simon Musical (Pro)</title>
 
-<!-- Fun readable font -->
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+<!-- Modern readable font -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --bg:#f6f7fb; --panel:#fff; --muted:#6b7280;
-  --accent:#ff9f43; --accent-dark:#ff7b00; --gold:#f5c45b; --danger:#ff6b6b;
+  --bg:#eef1f7; --panel:#fff; --muted:#6b7280;
+  --accent:#4f46e5; --accent-dark:#3b36c3; --gold:#f5c45b; --danger:#ef4444;
 }
 *{box-sizing:border-box}
-html,body{height:100%;margin:0;background:linear-gradient(180deg,#fbfbff,#f0f4ff);font-family:"Comic Neue",Segoe UI,Roboto,Arial,sans-serif;color:#122; -webkit-font-smoothing:antialiased}
+html,body{height:100%;margin:0;background:linear-gradient(180deg,#f9fafc,#e0e7ff);font-family:"Inter",Segoe UI,Roboto,Arial,sans-serif;color:#111; -webkit-font-smoothing:antialiased}
 .app{max-width:980px;margin:14px auto;padding:14px}
 .header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:10px}
 .brand{display:flex;align-items:center;gap:12px}
-.logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-dark));display:grid;place-items:center;color:#031018;font-weight:800;box-shadow:0 8px 20px rgba(3,16,24,.08)}
+.logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-dark));display:grid;place-items:center;color:#fff;font-weight:800;box-shadow:0 8px 20px rgba(0,0,0,.1)}
 .title{font-size:18px;margin:0}
 .subtitle{font-size:12px;color:var(--muted)}
 .controls{display:flex;gap:8px;align-items:center}
@@ -30,27 +30,27 @@ html,body{height:100%;margin:0;background:linear-gradient(180deg,#fbfbff,#f0f4ff
 .menuGrid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:12px}
 
 /* Buttons */
-.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:10px;border:0;background:linear-gradient(180deg,var(--accent),var(--accent-dark));color:#061018;font-weight:700;cursor:pointer;box-shadow:0 8px 20px rgba(3,16,24,.08)}
-.btn.ghost{background:transparent;border:1px solid rgba(0,0,0,.06);color:var(--muted);font-weight:600}
+.btn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:10px;border:0;background:linear-gradient(180deg,var(--accent),var(--accent-dark));color:#fff;font-weight:600;cursor:pointer;box-shadow:0 8px 20px rgba(0,0,0,.1)}
+.btn.ghost{background:transparent;border:1px solid rgba(0,0,0,.1);color:var(--muted);font-weight:500}
 .small{font-size:13px;color:var(--muted)}
 
 /* Layout for games */
 .game-area{display:flex;flex-direction:column;align-items:center;gap:12px;padding:12px}
-#bnStage{width:100%;max-width:460px;height:220px;position:relative;border-radius:12px;background:linear-gradient(180deg,#f5e8d0,#f0d4a0);box-shadow:inset 0 -30px 60px rgba(0,0,0,.05);overflow:hidden}
-.cup{position:absolute;bottom:18px;width:82px;height:82px;border-radius:50% 50% 0 0;background:linear-gradient(180deg,#7d522f,#c08f60);box-shadow:0 8px 20px rgba(0,0,0,.15);display:flex;align-items:flex-end;justify-content:center;padding-bottom:10px;color:#fff;font-weight:800;cursor:pointer;touch-action:manipulation}
-.ball{position:absolute;width:26px;height:26px;border-radius:50%;background:var(--danger);bottom:110px;left:50%;transform:translateX(-50%);box-shadow:0 6px 18px rgba(255,100,90,.25);transition:transform .18s}
+#bnStage{width:100%;max-width:460px;height:220px;position:relative;border-radius:12px;background:linear-gradient(180deg,#e5e7eb,#d1d5db);box-shadow:inset 0 -30px 60px rgba(0,0,0,.05);overflow:hidden}
+.cup{position:absolute;bottom:18px;width:82px;height:82px;border-radius:50% 50% 0 0;background:linear-gradient(180deg,#4b5563,#9ca3af);box-shadow:0 8px 20px rgba(0,0,0,.15);display:flex;align-items:flex-end;justify-content:center;padding-bottom:10px;color:#fff;font-weight:800;cursor:pointer;touch-action:manipulation}
+.ball{position:absolute;width:26px;height:26px;border-radius:50%;background:var(--danger);bottom:110px;left:50%;transform:translateX(-50%);box-shadow:0 6px 18px rgba(239,68,68,.25);transition:transform .18s}
 
 /* controls row */
 .controls-row{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:6px}
-.scorebar{display:flex;gap:14px;justify-content:center;color:var(--muted);font-weight:700}
+.scorebar{display:flex;gap:14px;justify-content:center;color:var(--muted);font-weight:600}
 
 /* Simon */
 .pad-grid{display:grid;grid-template-columns:repeat(2,120px);grid-gap:16px}
-.pad{width:120px;height:120px;border-radius:12px;display:grid;place-items:center;cursor:pointer;box-shadow:0 12px 30px rgba(3,16,24,.06);transition:transform .12s,filter .12s}
-.pad.red{background:linear-gradient(180deg,#ff9ea3,#ef6b72)}
-.pad.green{background:linear-gradient(180deg,#9ef4b8,#34c06b)}
-.pad.blue{background:linear-gradient(180deg,#a7d6ff,#4a95ff)}
-.pad.yellow{background:linear-gradient(180deg,#ffe39a,#ffbf50)}
+.pad{width:120px;height:120px;border-radius:12px;display:grid;place-items:center;cursor:pointer;box-shadow:0 12px 30px rgba(0,0,0,.08);transition:transform .12s,filter .12s}
+.pad.red{background:linear-gradient(180deg,#f87171,#b91c1c)}
+.pad.green{background:linear-gradient(180deg,#4ade80,#15803d)}
+.pad.blue{background:linear-gradient(180deg,#60a5fa,#1e3a8a)}
+.pad.yellow{background:linear-gradient(180deg,#facc15,#b45309)}
 .pad.active{transform:scale(1.06);filter:brightness(1.12)}
 
 /* Responsive tweaks */
@@ -100,8 +100,8 @@ html,body{height:100%;margin:0;background:linear-gradient(180deg,#fbfbff,#f0f4ff
   <div id="menu" class="card screen">
     <h3 style="margin:6px 0 8px 0">Menu principal</h3>
     <div class="menuGrid">
-      <button id="openBon" class="btn">🎩 Bonneteau 2D <div style="font-size:12px;color:var(--muted);font-weight:600">Bille visible → mélange fluide → niveaux</div></button>
-      <button id="openSim" class="btn">🎵 Simon Musical <div style="font-size:12px;color:var(--muted);font-weight:600">Chaque couleur = note • séquences aléatoires</div></button>
+      <button id="openBon" class="btn">🎩 Bonneteau 2D <div style="font-size:12px;color:var(--muted);font-weight:500">Bille visible → mélange fluide → niveaux</div></button>
+      <button id="openSim" class="btn">🎵 Simon Musical <div style="font-size:12px;color:var(--muted);font-weight:500">Chaque couleur = note • séquences aléatoires</div></button>
     </div>
   </div>
 
@@ -110,10 +110,9 @@ html,body{height:100%;margin:0;background:linear-gradient(180deg,#fbfbff,#f0f4ff
     <h3 style="margin:6px 0 8px 0">Bonneteau — niveau <span id="bnLevel">1</span></h3>
     <div class="game-area">
       <div id="bnStage" aria-label="Zone bonneteau">
-        <!-- cups will be positioned by JS -->
-        <div id="cup0" class="cup" data-index="0" style="left:40px">A</div>
-        <div id="cup1" class="cup" data-index="1" style="left:170px">B</div>
-        <div id="cup2" class="cup" data-index="2" style="left:300px">C</div>
+        <div id="cup0" class="cup" data-index="0" style="left:40px"></div>
+        <div id="cup1" class="cup" data-index="1" style="left:170px"></div>
+        <div id="cup2" class="cup" data-index="2" style="left:300px"></div>
         <div id="ball" class="ball" aria-hidden="false"></div>
       </div>
 
@@ -533,3 +532,4 @@ window.addEventListener('resize', ()=> {
 </script>
 </body>
 </html>
+
